# fishknn

./: .pdm-python  .pypirc  README.md  fish_knn.ipynb  pyproject.toml
src/fishknn/: predict.py
src/fishknn.egg-info/: PKG-INFO  SOURCES.txt
